Created a basic Page 3

--- a/CS460/HW4/Homework4/Homework4.csproj
+++ b/CS460/HW4/Homework4/Homework4.csproj
@@ -187,6 +187,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Page1.cshtml" />
     <Content Include="Views\Home\Page2.cshtml" />
+    <Content Include="Views\Home\Page3.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
