--- a/CS460/HW4/Homework4/Homework4.csproj
+++ b/CS460/HW4/Homework4/Homework4.csproj
@@ -182,12 +182,11 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Page1.cshtml" />
     <Content Include="Views\Home\Page2.cshtml" />
     <Content Include="Views\Home\Page3.cshtml" />
+    <Content Include="Views\Home\Page3_Result.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
