--- a/CS460/HW5/Homework5/Web.config
+++ b/CS460/HW5/Homework5/Web.config
@@ -11,7 +11,7 @@
   <!-- Connection to the database -->
   <connectionStrings>
     <add name="theDBContext" 
-         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" 
+         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Luis Loyh\Dropbox\School\Fall 2017\CS 460\Portfolio\CS460\HW5\Homework5\App_Data\myDatabase.mdf;Integrated Security=True;Connect Timeout=30" 
          providerName="System.Data.SqlClient" />
   </connectionStrings>  
   <appSettings>
