--- a/CS460/HW7/Homework7/Homework7/Web.config
+++ b/CS460/HW7/Homework7/Homework7/Web.config
@@ -4,11 +4,7 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
-  <appSettings>
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+  <appSettings file="C:\Users\Luis Loyh\Dropbox\School\Fall 2017\CS 460\API Data\APIKey.config">    
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
