--- a/CS460/HW7/Homework7/Homework7/Web.config
+++ b/CS460/HW7/Homework7/Homework7/Web.config
@@ -54,4 +54,8 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+<connectionStrings>
+  <add name="SearchesContext" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Homework7DB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" 
+       providerName="System.Data.SqlClient" />
+</connectionStrings>
 </configuration>
