Added CRUD functionality

--- a/CS460/HW8/Homework8/Homework8/Homework8.csproj
+++ b/CS460/HW8/Homework8/Homework8/Homework8.csproj
@@ -150,6 +150,9 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ArtistsController.cs" />
+    <Compile Include="Controllers\ArtWorksController.cs" />
+    <Compile Include="Controllers\ClassificationsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -203,6 +206,21 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Artists\Create.cshtml" />
+    <Content Include="Views\Artists\Delete.cshtml" />
+    <Content Include="Views\Artists\Details.cshtml" />
+    <Content Include="Views\Artists\Edit.cshtml" />
+    <Content Include="Views\Artists\Index.cshtml" />
+    <Content Include="Views\ArtWorks\Create.cshtml" />
+    <Content Include="Views\ArtWorks\Delete.cshtml" />
+    <Content Include="Views\ArtWorks\Details.cshtml" />
+    <Content Include="Views\ArtWorks\Edit.cshtml" />
+    <Content Include="Views\ArtWorks\Index.cshtml" />
+    <Content Include="Views\Classifications\Create.cshtml" />
+    <Content Include="Views\Classifications\Delete.cshtml" />
+    <Content Include="Views\Classifications\Details.cshtml" />
+    <Content Include="Views\Classifications\Edit.cshtml" />
+    <Content Include="Views\Classifications\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
