Added buttons through Ajax and fixed a bug in it

--- a/CS460/HW8/Homework8/Homework8/Homework8.csproj
+++ b/CS460/HW8/Homework8/Homework8/Homework8.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Models\ArtContext.cs" />
     <Compile Include="Models\Artist.cs" />
     <Compile Include="Models\ArtWork.cs" />
+    <Compile Include="Models\ArtWorkData.cs" />
     <Compile Include="Models\Classification.cs" />
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\ValidateDate.cs" />
